Disable mounting /opt/hook from host if stack.hook.enabled is set to false
This ensures that whatever pre-built Kernel image had been baked into the NGINX
Docker image is served.

Signed-off-by: Patrick Bartels <p.bartels@syseleven.de>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 0f73eee44e388a6f8828fc4b1977047d286cf8d0

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -50,8 +50,10 @@ spec:
             cpu: 10m
             memory: 64Mi
         volumeMounts:
+        {{- if .Values.stack.hook.enabled }}
         - mountPath: /usr/share/nginx/html
           name: hook-artifacts
+        {{- end }}
         - mountPath: /tmp
           readOnly: true
           name: nginx-conf
@@ -81,10 +83,12 @@ spec:
           name: hook-artifacts
       {{- end }}
       volumes:
+      {{- if .Values.stack.hook.enabled }}
       - name: hook-artifacts
         hostPath:
           path: /opt/hook
           type: DirectoryOrCreate
+      {{- end }}
       - name: nginx-conf
         configMap:
           name: nginx-conf
