only set the loadBalancerClass property when the user sets it to a non-empty value
this allows us to easily use the cluster default load balancer class

Signed-off-by: Rui Lopes <rgl@ruilopes.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: deb1c67359c5aea29d3f9c0a4c963103b60ce5d3

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -107,7 +107,9 @@ metadata:
 spec:
   type: {{ .Values.stack.service.type }}
   {{- if eq .Values.stack.service.type "LoadBalancer" }}
+  {{- if .Values.stack.lbClass }}
   loadBalancerClass: {{ .Values.stack.lbClass }}
+  {{- end }}
   loadBalancerIP: {{ .Values.stack.loadBalancerIP }}
   {{- end }}
   externalTrafficPolicy: Local
