--- a/charts/tinkerbell/boots/templates/service.yaml
+++ b/charts/tinkerbell/boots/templates/service.yaml
@@ -10,7 +10,9 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   {{- if eq .Values.service.type "LoadBalancer" }}
+  {{- if .Values.service.class }}
   loadBalancerClass: {{ .Values.service.class }}
+  {{- end }}
   loadBalancerIP: {{ $loadBalancerIP }}
   {{- end }}
   externalTrafficPolicy: Local
