Increase dependabot frequency to daily
Signed-off-by: Chris Doherty <chris.doherty4@gmail.com>

Legacy-Repo: hegel
Tinkerbell-Legacy-Original-SHA1: 18306c8496fb414d1753fc70caf3ca69bbe7c0ff

--- a/hegel/.github/dependabot.yml
+++ b/hegel/.github/dependabot.yml
@@ -3,19 +3,18 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "05:00"
+      interval: "daily"
       timezone: "America/New_York"
+    reviewers:
+      - chrisdoherty4
 
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
-      interval: "weekly"
-      day: "sunday"
-      time: "05:00"
+      interval: "daily"
       timezone: "America/New_York"
-    open-pull-requests-limit: 10
+    reviewers:
+      - chrisdoherty4
 
   - package-ecosystem: "docker"
     directory: "/"
@@ -24,3 +23,5 @@ updates:
       day: "sunday"
       time: "05:00"
       timezone: "America/New_York"
+    reviewers:
+      - chrisdoherty4
