simplify the nginx command
Signed-off-by: Rui Lopes <rgl@ruilopes.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 90d2cb1c8f589cc75dc8ea67af3c13ed7c8bd776

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -27,11 +27,14 @@ spec:
       containers:
       - name: {{ .Values.stack.name }}
         image: {{ .Values.stack.image }}
-        command: ["/bin/bash", "-c"]
+        command: ["/bin/bash", "-xeuc"]
         args:
-        - export POD_NAMESERVER=$(awk 'NR==2 {print $2}' /etc/resolv.conf);
-          envsubst '$POD_NAMESERVER' < /tmp/nginx.conf.template > /etc/nginx/nginx.conf;
-          nginx -g 'daemon off;'
+        - |
+          POD_NAMESERVER=$(awk 'NR==2 {print $2}' /etc/resolv.conf) \
+            envsubst '$POD_NAMESERVER' \
+            </tmp/nginx.conf.template \
+            >/etc/nginx/nginx.conf
+          exec nginx -g 'daemon off;'
         ports:
         - containerPort: {{ .Values.hegel.deployment.port }}
           protocol: TCP
