stack: add dhcrelay giaddr control behaviour
Introduce presentGIAddr to control the handling of incoming DHCPv4 packets which already contain relay agent options.

Signed-off-by: Seena Fallah <seenafallah@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 7cc5e43bce7e244a917679ee1960e38994a914e6

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -74,7 +74,7 @@ spec:
         {{- end }}
       - name: {{ .Values.stack.relay.name }}
         image: {{ .Values.stack.relay.image }}
-        args: ["-m", "append", "-c", "{{ .Values.stack.relay.maxHopCount }}", "-id", "{{ $macvlanInterfaceName }}", "-iu", "eth0", "-U", "eth0", "smee.{{ .Release.Namespace }}.svc.cluster.local."]
+        args: ["-m", "{{ .Values.stack.relay.presentGiaddrAction }}", "-c", "{{ .Values.stack.relay.maxHopCount }}", "-id", "{{ $macvlanInterfaceName }}", "-iu", "eth0", "-U", "eth0", "smee.{{ .Release.Namespace }}.svc.cluster.local."]
         ports:
         - containerPort: 67
           protocol: UDP
