--- a/charts/tinkerbell/stack/values.yaml
+++ b/charts/tinkerbell/stack/values.yaml
@@ -49,7 +49,9 @@ stack:
     # sourceInterface is the Host/Node interface to use for listening for DHCP broadcast packets.
     # When unset, the interface from the default route will be used.
     # sourceInterface: eno1
-    # TODO(jacobweinstock): add feature to be able to disable listening for broadcast traffic.
+    # enable/disable listening for broadcast traffic. Useful when the environment employs DHCP relay agent(s).
+    # default is true.
+    listenBroadcastTraffic: true
     # interfaceMode determines how we create the interface needed to listen for DHCP broadcast traffic.
     # by default macvlan is used. ipvlan is the only other option.
     # interfaceMode: ipvlan
