Workaround for ipvlan interfaces:
There is an issue with ipvlan interfaces not
receiving packets after creation. This works around
this issue to get packets flowing. This should be
investigated deeper to understand why this is happening.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: bf553e9179c4cd9dc417905face1f928418a1ed5

--- a/charts/tinkerbell/stack/templates/nginx.yaml
+++ b/charts/tinkerbell/stack/templates/nginx.yaml
@@ -143,8 +143,16 @@ spec:
             # Set the interface up
             ip link set {{ $dhcpInterfaceName }} up
             # Set the IP address
-            ip addr add 127.1.1.1/32 dev {{ $dhcpInterfaceName }} noprefixroute
-        image: alpine
+            ip addr add 127.1.1.1/32 dev {{ $dhcpInterfaceName }} noprefixroute || true
+            {{- if eq $dhcpInterfaceType "ipvlan" }}
+            # There is an issue with ipvlan interfaces. They do not start receiving broadcast packets after creation.
+            # This is a workaround to get broadcast packets flowing.
+            # TODO(jacobweinstock): Investigate this deeper and see if this is a kernel bug.
+            nsenter -t1 -n ip link del {{ $dhcpInterfaceName }}-wa || true
+            nsenter -t1 -n nmap --script broadcast-dhcp-discover
+            nsenter -t1 -n ip link add {{ $dhcpInterfaceName }}-wa link ${srcInterface} type ipvlan mode l2 bridge || true
+            {{- end }}
+        image: ghcr.io/jacobweinstock/relay-init:v0.1.0
         securityContext:
           privileged: true
       {{- end }}
