Handle shasum checking for HookOS > 0.8.1:
Releases of HookOS > 0.8.1 provide more binaries.
We only need the hook_aarch64 and hook_x86_64
binaries so we filter out the rest.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

Legacy-Repo: charts
Tinkerbell-Legacy-Original-SHA1: 48bc9bd22be7a3ce0b21564f3ba3b2ec81c79504

--- a/charts/tinkerbell/stack/templates/hook.yaml
+++ b/charts/tinkerbell/stack/templates/hook.yaml
@@ -19,7 +19,9 @@ data:
       echo "${f}"
       wget -P "${tmp_dir}" "${f}"
     done
-    (cd "${tmp_dir}" && sha512sum -c checksum.txt)
+    # releases of HookOS > 0.8.1 provide more binaries.
+    # We only need the hook_aarch64 and hook_x86_64 binaries so we filter out the rest.
+    (cd "${tmp_dir}" && sed -i '/hook_x86_64\|hook_aarch64/!d' checksum.txt && sha512sum -c checksum.txt)
     mv "${tmp_dir}"/checksum.txt .
     for f in ${tmp_dir}/*.tar.gz; do tar --no-same-permissions --overwrite -ozxvf "${f}" && rm -f "${f}"; done
     rm -rf "${tmp_dir}"
